<resources>
    <string name="app_name">MegustApp</string>
    <string name="username_label_form">Usuario</string>
    <string name="username_hint_form">Introduzca su usuario</string>
    <string name="password_label_form">Contraseña</string>
    <string name="password_hint_form">Introduzca su contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="register_button_text">Registrarse</string>
    <string name="change_to_register_text">¿Aún no tienes cuenta? Registrate</string>
    <string name="change_to_login_text">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="register_text">Registro</string>
    <string name="restaurant_register_button_text">Restaurante</string>
    <string name="client_register_button_text">Cliente</string>
    <string name="client_register_activity_name_label">Nombre</string>
    <string name="client_register_activity_telephone_label">Teléfono</string>
    <string name="client_register_activity_city_label">Ciudad</string>
    <string name="client_register_activity_email_label">Correo electrónico</string>
    <string name="client_register_activity_name_input">Introduzca su nombre</string>
    <string name="client_register_activity_telephone_input">Introduzca su teléfono</string>
    <string name="client_register_activity_city_input">Introduzca su ciudad</string>
    <string name="client_register_activity_email_input">Introduzca su correo</string>
    <string name="register_button_text2">Registrar</string>
    <string name="restaurant_register_activity_name_label">Nombre</string>
    <string name="restaurant_register_activity_city_label">Ciudad</string>
    <string name="restaurant_register_activity_menu_label">Menu</string>
    <string name="restaurant_register_activity_street_label">Calle</string>
    <string name="restaurant_register_activity_name_input">Introduzca el nombre del restaurante</string>
    <string name="restaurant_register_activity_city_input">Introduzca la ciudad del restaurante</string>
    <string name="restaurant_register_activity_menu_input">Introduzca el menu del restaurante</string>
    <string name="restaurant_register_activity_street_input">Introduzca la calle del restaurante</string>

    <!--Nuevos strings a partir de las modificaciones del 29/11/2025-->
    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="confirmar_clave">Confirmar contraseña</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo Electrónico</string>
    <string name="ciudad">Ciudad</string>
    <string name="calle">Calle</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="tipo_registro">Registrarse como</string>
    <string name="cambiar_a_registrarse">¿Aún no tienes cuenta? Registrate</string>
    <string name="cambiar_a_iniciar_sesion">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="volver_atras">Volver atrás</string>
    <string name="nuevo_cliente">Nuevo cliente</string>
    <string name="nuevo_restaurante">Nuevo restaurante</string>
    <string name="siguiente">Siguiente</string>
    <string name="finalizar_registro">Finalizar registro</string>
    <string name="menu">Menu</string>
    <string name="nuevo_plato">Nuevo plato</string>
    <string name="nombre_del_plato">Nombre del plato</string>
    <string name="escribir_ingredientes">Escriba aquí los ingredientes del plato</string>
    <string name="registrar_plato">Registrar plato</string>
    <string name="precio">Precio</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="proximamente">Próximamente...</string>
    <string name="datos_restaurante">Datos del restaurante</string>
    <string name="ciudad_malaga">Ciudad: Málaga</string>
    <string name="calle_iesbelen">Calle: Avenida de Isaac Peral, 16</string>
    <string name="telefono_iesbelen">Teléfono: +34951298425</string>
    <string name="ver_ubicacion">Ver ubicación</string>
    <string name="llamar">Llamar</string>
    <string name="large_text">null</string>
    <string name="restaurante">Restaurante</string>
    <string name="ver_valoraciones">Ver reseñas</string>
    <string name="modificar_menu">Modificar menu</string>
    <string name="modificar_datos">Modificar datos</string>
    <string name="valoraciones">Reseñas</string>
    <string name="direccion">Dirección</string>
    <string name="buscar">Buscar</string>
    <string name="cuenta">Cuenta</string>
    <string name="recargar_pagina">Recargar página</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="editar_plato">Editar plato</string>
    <string name="eliminar_plato">Eliminar plato</string>
    <string name="plato_2p">Plato: </string>
    <string name="precio_2p">Precio: </string>
    <string name="ingredientes_2p">Ingredientes: </string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="menu_restaurante">Menu del restaurante</string>
    <string name="datos_plato">Datos del plato</string>
    <string name="ingredidentes_plato">Ingredientes del plato</string>
    <string name="nuevo_ingrediente">Nuevo ingrediente</string>
    <string name="nombre_ingrediente">Nombre del ingrediente</string>
    <string name="es_alergeno">Es alérgeno? </string>
    <string name="agregar_ingrediente">Añadir ingrediente</string>
    <string name="subir_imagen_plato">Subir imágen</string>
    <string name="aplicar_cambios">Aplicar cambios</string>
    <string name="cancelar">Cancelar</string>
    <string name="sin_valoraciones">No hay reseñas registradas</string>
    <string name="valoraciones_restaurante">Valoraciones del restaurante</string>
    <string name="agregar_valoracion">Añadir reseña</string>
    <string name="nueva_valoracion">Nueva reseña</string>
    <string name="escribir_valoracion">Escribe tu reseña</string>
    <string name="finalizar">Finalizar</string>
    <string name="malaga">Málaga</string>
    <string name="sevilla">Sevilla</string>
    <string name="cordoba">Córdoba</string>
    <string name="madrid">Madrid</string>
    <string name="editar_ingrediente">Editar ingrediente</string>
    <string name="eliminar_ingrediente">Eliminar ingrediente</string>
</resources>