<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_ingredient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_ingrediente"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/accentAlt"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/nombre_del_ingrediente_add_ingredient"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/nombre_ingrediente"
        android:textColor="@color/textOnDark"
        android:textColorHint="@color/textOnDark"
        android:background="@drawable/edit_text"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/es_alergeno"
            android:textStyle="bold"
            android:textColor="@color/accentAlt"/>

        <CheckBox
            android:id="@+id/esAlergeno_add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/boton_agregar_ingrediente_add_ingredient"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:textColor="@color/textSecondary"
        android:text="@string/agregar_ingrediente"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/texto_volver_atras_add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_atras"
        android:textStyle="italic|bold"
        android:textColor="@color/textOnDark"
        android:layout_gravity="center"/>
</LinearLayout>