<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/client_register2_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_cliente"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/accentAlt"
        android:textAlignment="center"/>

    <View
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:background="@color/accentAlt"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/telefono_client_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/telefono"
        android:textColor="@color/textOnDark"
        android:textColorHint="@color/textOnDark"
        android:inputType="phone"
        android:background="@drawable/edit_text"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/ciudad_client_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/ciudad"
        android:textColor="@color/textOnDark"
        android:textColorHint="@color/textOnDark"
        android:background="@drawable/edit_text"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <ProgressBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="2"
        android:progress="2"
        android:progressTint="@color/accentAlt"
        android:progressBackgroundTint="@color/colorSecondary"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/boton_finalizar_registro_client_register2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:textColor="@color/textSecondary"
        android:text="@string/finalizar_registro"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/texto_volver_atras_client_register2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_atras"
        android:textStyle="italic|bold"
        android:textColor="@color/textOnDark"
        android:layout_gravity="center"/>


</LinearLayout>