<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_review"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nueva_valoracion"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/accentAlt"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    <RatingBar
        android:id="@+id/estrellas_activity_add_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stepSize="1"
        android:progressTint="@color/accent" />

    <EditText
        android:id="@+id/valoracion_activity_add_review"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:hint="@string/escribir_valoracion"
        android:textColor="@color/textOnDark"
        android:textColorHint="@color/textOnDark"
        android:background="@drawable/edit_text"
        android:padding="10dp"
        android:gravity="top"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>


    <Button
        android:id="@+id/boton_finalizar_activity_add_review"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:textColor="@color/textSecondary"
        android:text="@string/finalizar"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/texto_volver_atras_activity_add_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_atras"
        android:textStyle="italic|bold"
        android:textColor="@color/textOnDark"
        android:layout_gravity="center"/>
</LinearLayout>