<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/usuario_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/textOnDark"
        android:textColorHint="@color/textOnDark"
        android:background="@drawable/edit_text"
        android:hint="@string/usuario"
        android:textAlignment="center"
        android:padding="10dp"
        android:backgroundTintMode="add"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/clave_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/clave"
        android:textColorHint="@color/textOnDark"
        android:textColor="@color/textOnDark"
        android:background="@drawable/edit_text"
        android:backgroundTintMode="add"
        android:textAlignment="center"
        android:padding="10dp"
        android:inputType="textPassword"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/boton_iniciar_sesion_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:textColor="@color/textSecondary"
        android:text="@string/iniciar_sesion"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/texto_registrarse_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_a_registrarse"
        android:textStyle="italic|bold"
        android:textColor="@color/textOnDark"
        android:layout_gravity="center"/>

</LinearLayout>