<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valoraciones_restaurante"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/accentAlt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/texto_sin_valoraciones_data_restaurant_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sin_valoraciones"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/accent"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/valoraciones_data_restaurant_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/boton_agregar_valoracion_data_restaurant_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_valoracion"
        android:backgroundTint="@color/success"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

</LinearLayout>