<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/golden_rectangle"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/accentAlt"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/plato_2p"/>

            <TextView
                android:id="@+id/plato_dish_list_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/textOnDark"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/accentAlt"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/precio_2p"/>

            <TextView
                android:id="@+id/precio_dish_list_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/textOnDark"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/accentAlt"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/ingredientes_2p"/>

            <TextView
                android:id="@+id/ingredientes_dish_list_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/textOnDark"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>